--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-native": "0.68.2",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-date-picker": "^4.2.5",
+    "react-native-restart": "^0.0.24",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.17.0",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
